...
    ).push(MaterialPageRoute(builder: (context) => const SignupScreen()));
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(title: const Text('Login')),
      body: SafeArea(
        child: SingleChildScrollView(
          padding: const EdgeInsets.all(16.0),
          child: Form(
            key: _formKey,
            child: Column(
...
                          )
                          : const Text('Login'),
                ),
                const SizedBox(height: 16),
                TextButton(
                  onPressed: _navigateToSignup,
                  child: const Text("Don't have an account? Sign up"),
                ),
                const SizedBox(height: 60),
              ],
            ),
          ),
        ),
...
